--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,34 @@
+.videoWallpaper {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
 body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    margin: 2%;
+    color: white;
 }
 
 header h1 {
     text-align: center;
+    text-decoration-line: none;
+    color: black;
+}
+
+header, .topSection {
+    display: flex;
+    flex-direction: column;
+}
+
+.navItem {
+    margin: 0 auto 0 auto;
 }
 
 main {
