--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
-    margin: 2%;
-    color: white;
+    color: black;
 }
 
 header h1 {
@@ -22,9 +21,11 @@ header h1 {
     color: black;
 }
 
-header, .topSection {
+header {
     display: flex;
     flex-direction: column;
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 1% 0 1% 0;
 }
 
 .navItem {
@@ -34,4 +35,34 @@ header, .topSection {
 main {
     flex: 1;
     padding: 1rem;
+    background-color: rgba(255, 255, 255, 0.8);
+    width: 80vw;
+    margin: 0 auto 0 auto;
+}
+
+.contentSection {
+    display: flex;
+    flex-direction: row;
+    gap: 2%;
+}
+
+.aboutHoloLab, .aboutMe {
+    align-content: center;
+}
+
+.contentSectionItem {
+    flex: 1;
+    padding: 1rem;
+}
+
+.selfie {
+    max-width: 75%;
+    height: auto;
+    border-radius: 50%;
+}
+
+footer {
+    background-color: rgba(255, 255, 255, 0.8);
+    max-width: 80vw;
+    margin: 0 auto 0 auto;
 }
